[package]
name = "coolq-app-python"
version = "0.0.1"
authors = ["soeur <juzi201314@gmail.com>"]
edition = "2018"
links = "CQP"

[dependencies]
#coolq-sdk-rust = {path = "../coolq-sdk-rust"}
coolq-sdk-rust = {git = "https://github.com/juzi5201314/coolq-sdk-rust.git"}
lazy_static = "1.2.0"
alerts = "0.1.1"

[dependencies.pyo3]
git = "https://github.com/PyO3/pyo3.git"
features = ["extension-module"]

[lib]
name = "coolq_app_python"
crate-type = ["cdylib"]

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"